--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--  -->
 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Codeforces tracker</title>
 </head>
 
 <body>
