--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
     
-
+    <h1>Home Page</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere maiores provident corporis ratione distinctio! Neque magni exercitationem iusto in totam laboriosam, maiores iure ullam aperiam itaque velit nulla magnam delectus.</p>
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
