Added Username input card

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <!-- NavBar -->
-    <nav class=" navcolor navbar navbar-expand-lg navbar-dark ">
+    <nav class=" navcolor navbar navbar-expand-lg ">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
           <img
