added profile.html and dash.css, changed navbar button to 3 dot

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- NavBar -->
     <nav class="navcolor navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
+        <a class="navbar-brand text-white" href="./index.html">
           <img
             src="https://codeforces-upsolving-helper.herokuapp.com/static/images/codeforces-icon.png"
             alt=""
@@ -113,7 +113,7 @@
 
               <div class="form__div">
                 <input type="text" class="form__input" placeholder=" " />
-                <label for="" class="form__label">Codeforces Username</label>
+                <label for="" class="form__label">Codeforces Handle</label>
               </div>
               <input type="submit" class="form__button" value="Submit" />
             </form>
