--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+ 
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    
     <title>Codeforces Tracker | Profile</title>
     <script
       type="text/javascript"
@@ -85,6 +86,7 @@
             fill="currentColor"
             class="bi bi-three-dots-vertical"
             viewBox="0 0 20 20"
+            id="dot"
           >
             <path
               d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
@@ -117,7 +119,7 @@
       </div>
     </nav>
     <!-- navbar ending -->
-
+  
     <div
       class="offcanvas offcanvas-start sidebar-nav bg-dark"
       tabindex="-1"
@@ -125,7 +127,7 @@
     >
       <div class="offcanvas-body p-0">
         <nav class="navbar-dark">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav responsive">
             <li>
               <a href="#" class="nav-link px-3 active">
                 <span class="me-2"><i class="bi bi-speedometer2"></i></span>
@@ -160,7 +162,8 @@
         </nav>
       </div>
     </div>
-
+   
+  
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
