Co-authored-by: Wasim Raja <wasim7raja10@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col">
           <div class="l-form">
-            <form action="" class="form">
+            <form action="./profile.html" class="form">
               <svg
                 class="codeforce-icon"
                 xmlns="http://www.w3.org/2000/svg"
