--- a/profile.html
+++ b/profile.html
@@ -164,27 +164,60 @@
     </div>
    
    <!--Crad-->
-   <div class="card" style="width: 18rem;">
-      <img src="img/walle.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="card mb-3">
+      <div class="ds-top">
+        <div id="particles-js"></div>
+        </div>
+        <div class="avatar-holder">
+        <img src="img/walle.png" class="img-fluid" id="card-img-top" alt="responsive">
+        </div>
+    
+         <div class="card-body">
+        
+      <div class="container" >
+       <div class="row">
+       <div class="col">
+         <h5 class="name">expert</h5>
+        <h5 class="name">yawner</h5>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+      <div class="col" id="detail">
+       <ul class="list-group list-group-flush">
+        <li class="list-group-item">WASIM RAJA</li>
+        <li class="list-group-item">Bengal College Of Engineering And Technology</li>
+        <li class="list-group-item">India</li>
+         <li class="list-group-item">Contribution: +20</li>
       </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+       </div>
+     </div>
+     </div>
+      </div>
+       <div class="card-footer">
+       <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              RATING
+              <p>1600</p>
+            </div>
+            <div class="col-sm">
+              RANK
+              <p>1500</p>
+            </div>
+            <div class="col-sm">
+             TOTAL CONTEST
+             <p>20</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+    <script src="particles.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
