card changes done

--- a/profile.html
+++ b/profile.html
@@ -176,7 +176,7 @@
         
       <div class="container" >
        <div class="row">
-       <div class="col">
+       <div class="col" id="name">
          <h5 class="name">expert</h5>
         <h5 class="name">yawner</h5>
       </div>
@@ -197,13 +197,14 @@
             <div class="col-sm">
               RATING
               <p>1600</p>
+              
             </div>
             <div class="col-sm">
-              RANK
+              RANK 
               <p>1500</p>
             </div>
             <div class="col-sm">
-             TOTAL CONTEST
+             MAX RATING
              <p>20</p>
             </div>
           </div>
