card bottom number counting animation added

--- a/profile.html
+++ b/profile.html
@@ -185,7 +185,7 @@
         <li class="list-group-item">WASIM RAJA</li>
         <li class="list-group-item">Bengal College Of Engineering And Technology</li>
         <li class="list-group-item">India</li>
-         <li class="list-group-item">Contribution: +20</li>
+         <li class="list-group-item">Contribution: +<span class="count">20</span></li>
       </ul>
        </div>
      </div>
@@ -194,18 +194,19 @@
        <div class="card-footer">
        <div class="container">
           <div class="row">
-            <div class="col-sm">
+            <div class="col-sm" >
               RATING
-              <p>1600</p>
+              
+              <p class="count">1600</p>
               
             </div>
             <div class="col-sm">
               RANK 
-              <p>1500</p>
+              <p class="count">1500</p>
             </div>
             <div class="col-sm">
              MAX RATING
-             <p>20</p>
+             <p class="count">20</p>
             </div>
           </div>
         </div>
