--- a/profile.html
+++ b/profile.html
@@ -12,8 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="dash.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./stylesheet/dash.css" />
+    <link rel="stylesheet" href="./stylesheet/style.css" />
     <!-- material icon  -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -220,7 +220,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-    <script src="particles.js"></script>
-    <script src="index.js"></script>
+    <script src="./js/particles.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
