--- a/sidenav.html
+++ b/sidenav.html
@@ -10,8 +10,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="sidenav.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./stylesheet/sidenav.css">
+    <link rel="stylesheet" href="./stylesheet/style.css" />
     <!-- Boxiocns CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -124,7 +124,7 @@
 
 
 
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
