--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="col">
         <div class="l-form">
-          <form action="./profile.html" class="form">
+          <form action="./sidenav.html" class="form">
             <svg class="codeforce-icon" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24"
               viewBox="0 0 24 24">
               <path fill="#2196F3"
