added contribution file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="col">
         <div class="l-form">
-          <form  class="form">
+          <form action="./sidenav.html" class="form">
             <object class="codeforce-icon" data="./img/cf.svg" type="image/svg+xml"></object>
             <h1 class="form__title">Codeforces Handle</h1>
 
