link home page to dashboard

--- a/sidenav.html
+++ b/sidenav.html
@@ -32,7 +32,7 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="#" class="nav__link">
+        <a href="./index.html" class="nav__link">
           <i class='bx bx-home' ></i>
           <span class="link_name">Home</span>
         </a>
