--- a/index.html
+++ b/index.html
@@ -1,100 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./stylesheet/style.css" />
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./stylesheet/style.css" />
+    <!-- material icon  -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
-  <!-- material icon  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <title>Codeforces Tracker</title>
-</head>
+    <!--font awesome-->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"
+    ></script>
 
-<body>
-  <!-- NavBar -->
-  <nav class="navcolor navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand text-white" href="./index.html">
-        <img src="https://codeforces-upsolving-helper.herokuapp.com/static/images/codeforces-icon.png" alt="" width="30"
-          height="24" class="d-inline-block align-text-top" />
-        Codeforces Tracker
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active text-white" aria-current="page" href="#">
-            <span class="material-icons align-bottom"> home </span>
-            HOME
-          </a>
-          <a class="nav-link text-white" href="#">
-            <span class="material-icons align-bottom"> emoji_events</span>
-            CONTEST
-          </a>
-          <a class="nav-link text-white" href="#">
-            <span class="material-icons align-bottom"> compare </span>
-            COMPARE
-          </a>
+    <title>Codeforces Tracker</title>
+  </head>
+
+  <body>
+    <!-- NavBar -->
+    <nav class="navcolor navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="./index.html">
+          <img
+            src="https://codeforces-upsolving-helper.herokuapp.com/static/images/codeforces-icon.png"
+            alt=""
+            width="30"
+            height="24"
+            class="d-inline-block align-text-top"
+          />
+          Codeforces Tracker
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a class="nav-link active text-white" aria-current="page" href="#">
+              <span class="material-icons align-bottom"> home </span>
+              HOME
+            </a>
+            <a class="nav-link text-white" href="#">
+              <span class="material-icons align-bottom"> emoji_events</span>
+              CONTEST
+            </a>
+            <a class="nav-link text-white" href="#">
+              <span class="material-icons align-bottom"> compare </span>
+              COMPARE
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- grid -->
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="l-form">
+            <form action="./sidenav.html" class="form">
+              <object
+                class="codeforce-icon"
+                data="./img/cf.svg"
+                type="image/svg+xml"
+              ></object>
+              <h1 class="form__title">Codeforces Handle</h1>
+
+              <!-- username input -->
+              <div class="form__div">
+                <input
+                  type="text"
+                  name="handle"
+                  id="handle"
+                  class="form__input"
+                  placeholder=" "
+                />
+                <label for="handle" class="form__label"
+                  >Codeforces Handle</label
+                >
+              </div>
+              <input type="submit" class="form__button" value="Submit" />
+            </form>
+          </div>
+        </div>
+
+        <div class="col align-self-center">
+          <h1 class="display-6">
+            Track your
+            <a
+              class="typewrite"
+              data-period="2000"
+              data-type='["Profile", "Contest History", "Submission History", "Progress", "Todo"]'
+            >
+            </a>
+          </h1>
+          <br />
+
+          <!--SVG CODE-->
+          <div class="front-image">
+            <object data="./img/home.svg" type="image/svg+xml"></object>
+          </div>
         </div>
       </div>
     </div>
-  </nav>
-  <!-- grid -->
 
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="l-form">
-          <form action="./sidenav.html" class="form">
-            <object class="codeforce-icon" data="./img/cf.svg" type="image/svg+xml"></object>
-            <h1 class="form__title">Codeforces Handle</h1>
-
-            <!-- username input -->
-            <div class="form__div">
-              <input type="text" name="handle" id="handle" class="form__input" placeholder=" " />
-              <label for="handle" class="form__label">Codeforces Handle</label>
-            </div>
-            <input type="submit" class="form__button" value="Submit" />
-          </form>
+    <!-- FOOTER -->
+    <footer class="w-100 py-4 flex-shrink-0">
+      <div class="container py-4">
+        <div class="row gy-4 gx-5">
+          <div class="col-lg-4 col-md-6">
+            <h5 class="h1 text-white">CT.</h5>
+            <p class="small text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <p class="small text-muted mb-0">
+              &copy; Copyrights. All rights reserved.
+              <a class="text-primary" href="#">CodeForces Tracker</a>
+            </p>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <h5 class="text-white mb-3">Quick links</h5>
+            <ul class="list-unstyled text-muted">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Contest</a></li>
+              <li><a href="#">Compare</a></li>
+              <li><a href="#">TODO</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <h5 class="text-white mb-3">Quick links</h5>
+            <ul class="list-unstyled text-muted">
+              <li><a href="#">Submission</a></li>
+              <li><a href="#">Ladder</a></li>
+              <li><a href="#">Contest history</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <h5 class="text-white mb-3">Newsletter</h5>
+            <p class="small text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <form action="#">
+              <div class="input-group mb-3">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Recipient's username"
+                  aria-label="Recipient's username"
+                  aria-describedby="button-addon2"
+                />
+                <button
+                  class="btn btn-primary"
+                  id="button-addon2"
+                  type="button"
+                >
+                  <i class="fas fa-paper-plane"></i>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
+    </footer>
 
-      <div class="col align-self-center">
-        <h1 class="display-6">Track your <a class="typewrite" data-period="2000"
-            data-type='["Profile", "Contest History", "Submission History", "Progress", "Todo"]'>
-          </a></h1><br>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
-        <!--SVG CODE-->
-        <div class="front-image">
-          <object data="./img/home.svg" type="image/svg+xml"></object>
-        </div>
-      </div>
-    </div>
-  </div>
+    <!-- axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
+    <!-- Typewriter Effect JS -->
+    <script src="./js/typewriter.js"></script>
+    <!-- End of Typewriter Effect JS  -->
 
-  <!-- axios -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-  <!-- Typewriter Effect JS -->
-  <script src="./js/typewriter.js"></script>
-  <!-- End of Typewriter Effect JS  -->
-
-  <script src="./js/data.js"></script>
-  <script src="./js/index.js"></script>
-
-</body>
-
+    <script src="./js/data.js"></script>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
