--- a/sidenav.html
+++ b/sidenav.html
@@ -122,6 +122,13 @@
       
   </section>
 
+   <!-- footer -->
+  <footer style=" background-color: rgb(25, 24, 29);">
+    <div style="padding-top: 2%; padding-bottom: 2%;">
+     <p style="text-align: left; display: inline; padding-left: 10%; padding-right: 60%;color: white; font-family: 'Open Sans', sans-serif">Socials<a href="https://github.com/wasim7raja10/Codeforces-tracker" style="color: white; padding-left: 3%;"><img src="./img/github.png"/></a></p>
+      <p style="color: white; align-content: flex-end;  font-family: 'Open Sans', sans-serif;margin: auto; text-align: right; display: inline; ">Codeforces Tracker</p>
+    </div>
+  </footer>
 
 
   <script src="./js/script.js"></script>
