changed hovered text

--- a/sidenav.html
+++ b/sidenav.html
@@ -70,7 +70,7 @@
       $('#heatmap').github_graph({
         //Generate random entries from 10-> 100 entries
         data: getRandomTimeStamps(10, 100, null, false),
-        texts: ['comment', 'comments'],
+        texts: ['problem solved', 'problems solved'],
         //override colours
         colors: ['rgba(0,0,0,0.3)', '#d6e685', '#8cc665', '#44a340', '#44a340'],
       });
