made footer responsive

--- a/sidenav.html
+++ b/sidenav.html
@@ -123,10 +123,11 @@
   </section>
 
    <!-- footer -->
-  <footer style=" background-color: rgb(25, 24, 29);">
-    <div style="padding-top: 2%; padding-bottom: 2%;">
-     <p style="text-align: left; display: inline; padding-left: 10%; padding-right: 60%;color: white; font-family: 'Open Sans', sans-serif">Socials<a href="https://github.com/wasim7raja10/Codeforces-tracker" style="color: white; padding-left: 3%;"><img src="./img/github.png"/></a></p>
-      <p style="color: white; align-content: flex-end;  font-family: 'Open Sans', sans-serif;margin: auto; text-align: right; display: inline; ">Codeforces Tracker</p>
+   <footer class="white-section" style="padding-top: 5%; padding-bottom: 5%; margin: 0;">
+    <div class="container" >
+
+     <p class="footertext" style="position: absolute; left: 10%; margin-right: 10%;;">Socials <a  href="https://github.com/wasim7raja10/Codeforces-tracker"><img src="./img/github.png" style="margin-left: 5%;" height="30%" width="30%" ></a></p>    
+     <p  class="footertext " style="position: absolute; right: 7%;;" style="margin: 0;" >Codeforces Tracker</p><br>
     </div>
   </footer>
 
