--- a/sidenav.html
+++ b/sidenav.html
@@ -122,14 +122,14 @@
       
   </section>
 
-   <!-- footer -->
-   <footer class="white-section" style="padding-top: 2%; padding-bottom: 2%; margin: 0;">
-    <div class="container" >
+   <footer class="home-section" style="padding-top: 2%;background:  rgb(25, 24, 29); padding-bottom: 2%; margin: 0; height: 10%;">
+    <div class="container-sm" >
 
-     <p class="footertext" style="position: absolute; left: 10%; margin-right: 10%;;">Socials <a  href="https://github.com/wasim7raja10/Codeforces-tracker"><img src="./img/github.png" style="margin-left: 5%;" height="30%" width="30%" ></a></p>    
-     <p  class="footertext " style="position: absolute; right: 7%;;" style="margin: 0;" >Codeforces Tracker</p><br>
+     <h6 class="footertext " style="position: absolute; left: 10%;">Socials <a  href="https://github.com/wasim7raja10/Codeforces-tracker"><img src="./img/github.png" style="margin-left: 5%;" height="30%" width="30%" ></a></h6>   
+     <p  class="footertext " style="position: absolute; right: 7%;" style="margin: auto;" >Codeforces Tracker</p><br>
     </div>
   </footer>
+
 
 
   <script src="./js/script.js"></script>
