--- a/sidenav.html
+++ b/sidenav.html
@@ -121,14 +121,14 @@
      </div>
       
   </section>
-
-   <footer class="home-section" style="padding-top: 2%;background:  rgb(25, 24, 29); padding-bottom: 2%; margin: 0; height: 10%;">
-    <div class="container-sm" >
-
-     <h6 class="footertext " style="position: absolute; left: 10%;">Socials <a  href="https://github.com/wasim7raja10/Codeforces-tracker"><img src="./img/github.png" style="margin-left: 5%;" height="30%" width="30%" ></a></h6>   
-     <p  class="footertext " style="position: absolute; right: 7%;" style="margin: auto;" >Codeforces Tracker</p><br>
-    </div>
-  </footer>
+  
+    <!-- footer -->
+   <section class="home-section" id="footertext">
+    <div class="home-content header__toggle">
+      <span class="textfooter">Socials <span  class=""> <a  href="https://github.com/wasim7raja10/Codeforces-tracker"><img src="./img/github.png"></a></span></span> 
+      <span class="textfooter right">Codeforces tracker</span>
+   </div>
+     
 
 
 
