Removed: profile.html

--- a/sidenav.html
+++ b/sidenav.html
@@ -258,12 +258,12 @@
 
   <!-- end of side navbar -->
   <section class="home-section" id="header">
-    <!-- <div class="home-content header__toggle">
+    <div class="home-content header__toggle">
       <i class='bx bx-menu' id="header-toggle"></i>
       <span class="text">Codeforces <span class="text2"> Tracker</span></span>
     </div> -->
 
-    <!-- <div class="container">
+    <div class="container">
       <div class="col mt-3 mb-4">
         <div class=" col mt-1 ms-1 me-1 titles">
           <span class=" row ms-4 graphtitles ">Year Log</span>
@@ -288,7 +288,7 @@
         </div>
         <div class="chart col ms-1 me-1 ps-2 mb-4" id="heatmap"> </div>
       </div>
-    </div> -->
+    </div>
 
     <div class='chart_container'>
       <div class="piechart"></div>
