Bug Fixed Sidenavbar Done

--- a/sidenav.html
+++ b/sidenav.html
@@ -31,14 +31,17 @@
       <span class="logo_name">Tracker</span> 
     </div>
     <ul class="nav-links">
-      <li>
-        <a href="./index.html" class="nav__link">
-          <i class='bx bx-home' ></i>
-          <span class="link_name">Home</span>
-        </a>
-        <ul class="sub-menu blank">
+      <li class="home_hover">
+        <div>
+          <a href="./index.html" class="nav__link">
+            <i class='bx bx-home' ></i>
+            <span class="link_name">Home</span>
+          </a>
+        </div>
+        
+        <!-- <ul class="sub-menu blank">
           <li><a class="link_name" href="#">Home</a></li>
-        </ul>
+        </ul> -->
       </li>
       <li>
         <div class="iocn-link">
