Bug Fixed Sidenavbar New

--- a/sidenav.html
+++ b/sidenav.html
@@ -38,10 +38,9 @@
             <span class="link_name">Home</span>
           </a>
         </div>
-        
-        <!-- <ul class="sub-menu blank">
+        <ul class="sub-menu blank">
           <li><a class="link_name" href="#">Home</a></li>
-        </ul> -->
+        </ul>
       </li>
       <li>
         <div class="iocn-link">
