chart overfolw fix

--- a/sidenav.html
+++ b/sidenav.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./stylesheet/sidenav.css">
   <link rel="stylesheet" href="./stylesheet/style.css" />
   <link rel="stylesheet" href="./stylesheet/heatmap.css" />
-  <link rel="stylesheet" href="./stylesheet/piechart.css">
+  <link rel="stylesheet" href="./stylesheet/piechart.css" />
   <!-- Boxiocns CDN Link -->
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -281,7 +281,7 @@
           <div class="col-sm-6 ">
             <div class="card">
               <div class=" col mt-1 ms-1 me-1 titles">
-                <span class="row ms-4 graphtitles ">Verdict</span>
+                <span class="row ms-4 mb-1 graphtitles ">Verdict</span>
               </div>
               <div class="card-body piechart">
               </div>
@@ -290,7 +290,7 @@
           <div class="col-sm-6">
             <div class="card">
               <div class=" col mt-1 ms-1 me-1 titles">
-                <span class="row ms-4 graphtitles ">Language</span>
+                <span class="row ms-4 mb-1 graphtitles ">Language</span>
               </div>
               <div class="card-body piechart_2">
               </div>
