Added pie chart

--- a/sidenav.html
+++ b/sidenav.html
@@ -171,7 +171,7 @@
       var chart_2 = new google.visualization.PieChart(document.querySelector('.piechart_2'));
       chart_2.draw(data, options_2);
       
-    }
+    };
   </script>
 </head>
 
@@ -325,9 +325,7 @@
         </div>
         <div class="chart col ms-1 me-1 ps-2 mb-4" id="heatmap"> </div>
       </div>
-    </div>
-
-
+    </div><br>
   </section>
   <section class="footer">
 
